# accelerator

./: .editorconfig  .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  mise.toml  pyproject.toml  stories.md
cli/: Cargo.toml  clippy.toml  deny.toml  pup.ron  rustfmt.toml
cli/config/: Cargo.toml
cli/config-adapters/: Cargo.toml
cli/config-adapters/src/: compose.rs  document.rs  frontmatter.rs  legacy.rs  lib.rs  render.rs  store.rs
cli/config-adapters/tests/: config_reader.rs  parity.rs
cli/config-adapters/tests/fixtures/: config_adapters_fixture.rs
cli/config/src/: catalogue.rs  error.rs  identifier.rs  key.rs  legacy.rs  level.rs  lib.rs  node.rs  render.rs  service.rs
cli/corpus/: Cargo.toml
cli/corpus-adapters/: Cargo.toml
cli/corpus-adapters/src/: assemble.rs  doc_type.rs  document.rs  jsonl.rs  lib.rs  lock.rs  metadata.rs  patcher.rs  scanner.rs  store.rs
cli/corpus-adapters/tests/: doc_type_single_source.rs  metadata.rs  parity.rs  store.rs
cli/corpus-adapters/tests/common/: mod.rs
cli/corpus/src/: doc_type.rs  lib.rs  linkage.rs  metadata.rs  record.rs  slug.rs  store.rs  typed_ref.rs  value.rs  work_item_id.rs
cli/document/: Cargo.toml
cli/document/src/: error.rs  fence.rs  lib.rs  parse.rs  render.rs  tags.rs  value.rs
cli/document/tests/: adversarial.rs  document.rs
cli/document/tests/fixtures/: document_fixture.rs
cli/kernel/: Cargo.toml
cli/kernel/src/: lib.rs  logging.rs
cli/launcher/: Cargo.toml  build.rs
cli/launcher/src/: lib.rs  main.rs
cli/launcher/src/config_command/: mod.rs
cli/launcher/src/config_command/core/: agents.rs  context.rs  dump.rs  get.rs  init.rs  mod.rs  paths.rs  review.rs  summary.rs  template.rs  work.rs
cli/launcher/src/config_command/inbound/: cli.rs  mod.rs
cli/launcher/src/config_command/render/: agents.rs  context.rs  dump.rs  instructions.rs  mod.rs  paths.rs  review.rs  summary.rs  template.rs
cli/launcher/src/launch/: core.rs  help.rs  mod.rs
cli/launcher/src/launch/inbound/: cli.rs
cli/launcher/src/launch/outbound/: exec.rs  mod.rs  resolver.rs  tls.rs
cli/launcher/src/version/inbound/: cli.rs
cli/launcher/src/version/outbound/: build_metadata.rs
cli/launcher/tests/: config_read.rs  crypto_provider.rs  dispatch.rs  help.rs  resolution.rs  version.rs
cli/launcher/tests/common/: mod.rs
cli/launcher/tests/fixtures/: accelerator_fixture.rs  manifest.example.json  manifest.schema.json
cli/launcher/tests/fixtures/agents/: agents.golden  config.md
cli/launcher/tests/fixtures/bad-integration/: config.md
cli/launcher/tests/fixtures/baseline/: agents.golden  config.md  context.golden  doctypes.golden  paths.golden  review-work-item.golden
cli/launcher/tests/fixtures/context-full/: config.local.md  config.md  context-skill.golden  context.golden  instructions.golden
cli/launcher/tests/fixtures/custom-lenses/: config.md
cli/launcher/tests/fixtures/doc-type-escape/: config.md
cli/launcher/tests/fixtures/dump/: config.local.md  config.md  dump.golden
cli/launcher/tests/fixtures/review-core-lenses/: config.md
cli/launcher/tests/fixtures/summary/: config.md  summary.golden
cli/store/: Cargo.toml
cli/store/src/: lib.rs
cli/vcs/: Cargo.toml
cli/vcs-adapters/: Cargo.toml
cli/vcs-adapters/src/: lib.rs
cli/vcs-adapters/tests/: detection.rs
cli/vcs/src/: lib.rs
cli/verify/: Cargo.toml
cli/verify/src/: main.rs
cli/verify/tests/: verify.rs
skills/visualisation/visualise/: Cargo.toml  SKILL.md
skills/visualisation/visualise/a9r/: Cargo.toml
skills/visualisation/visualise/a9r-core/: Cargo.toml
skills/visualisation/visualise/a9r-core/src/: agents.rs  body.rs  defaults.rs  files.rs  frontmatter.rs  lib.rs  lookup.rs  repo.rs  template.rs
skills/visualisation/visualise/a9r/src/: main.rs
skills/visualisation/visualise/a9r/tests/: api_smoke.rs  config_cli.rs  shutdown.rs
skills/visualisation/visualise/cli/: accelerator-visualiser
skills/visualisation/visualise/frontend/: .gitignore  README.md  biome.jsonc  index.html  package-lock.json  package.json  playwright.config.ts  playwright.docker.config.ts  playwright.glyph.config.ts  tsconfig.e2e.json  tsconfig.e2e.tsbuildinfo  tsconfig.node.json  vite.config.ts
skills/visualisation/visualise/frontend/e2e/: cross-refs.spec.ts  default-pattern.spec.ts  dev-design-system.spec.ts  dnd.ts  global-setup.ts  global-teardown.ts  kanban-click-vs-drag.spec.ts  kanban-columns.spec.ts  kanban-conflict.spec.ts  kanban-cross-config.spec.ts  kanban-drag-overlay.spec.ts  kanban-keyboard.spec.ts  kanban.spec.ts  legacy-schema.spec.ts  mermaid.spec.ts  mock-board.ts  navigation.spec.ts  project-pattern-custom-columns.spec.ts  smoke.spec.ts  start-server.mjs  wiki-links.spec.ts
skills/visualisation/visualise/frontend/scripts/: scan-css-literals.ts  visual-diff-ciede2000.test.ts  visual-diff-ciede2000.ts
skills/visualisation/visualise/frontend/src/: main.import-hygiene.test.ts  main.tsx  router-with-crumb.test.ts  router.test.tsx  router.ts
skills/visualisation/visualise/frontend/test-results/: .last-run.json
skills/visualisation/visualise/scripts/: launch-server.sh  launcher-helpers.sh  status-server.sh  stop-server.sh  test-a9r-acquisition.sh  test-cli-wrapper.sh  test-helpers.sh  test-launch-server.sh  test-status-server.sh  test-stop-server.sh  test-visualiser.sh  test-write-visualiser-config.sh  visualiser.sh  write-visualiser-config.sh
skills/visualisation/visualise/server/: Cargo.toml  build.rs  rustfmt.toml
skills/visualisation/visualise/server/src/: activity.rs  activity_feed.rs  assets.rs  cluster_key.rs  clusters.rs  config.rs  docs.rs  file_driver.rs  frontmatter.rs  indexer.rs  lib.rs  lifecycle.rs  log.rs  main.rs  patcher.rs  related.rs  server.rs  shutdown.rs  slug.rs  sse_hub.rs  templates.rs  test_support.rs  typed_ref.rs  watcher.rs  write_coordinator.rs
skills/visualisation/visualise/server/tests/: api_docs.rs  api_docs_patch.rs  api_library_structure.rs  api_lifecycle.rs  api_related.rs  api_search.rs  api_smoke.rs  api_templates.rs  (+10 more)
(+2646 files in other folders)
