[project]
name = "accelerator"
dynamic = ["version"]
description = "A Claude Code plugin for structured, context-efficient software development."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Toby Clemson", email = "toby@go-atomic.io" }]
license = "MIT"

[dependency-groups]
build = [
    "invoke>=2.2.1",
    "keepachangelog>=2.0.0",
    "rich>=14.2.0",
    "semver>=3.0.4,<4",
    "tomlkit>=0.13,<0.14",
    "ziglang>=0.16.0",
    "cargo-zigbuild>=0.22.3"
]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]

[tool.uv]
prerelease = "allow"

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://github.com/atomicinnovation/accelerator"
Repository = "https://github.com/atomicinnovation/accelerator"
