# resolver 3 so rust-version drives MSRV-aware dependency selection.
[workspace]
resolver = "3"
members = ["launcher", "kernel", "verify", "config", "config-adapters"]

[workspace.package]
version = "1.24.0-pre.11"
edition = "2021"
rust-version = "1.90.0"
license = "MIT"
publish = false

[workspace.dependencies]
# Exact-pinned: external_subcommand capture and --help interception ordering
# are behaviour-sensitive.
clap = { version = "=4.6.1", features = ["derive"] }
# vergen and vergen-gitcl are a matched pair pinned exactly: vergen 9.1.0's
# transitive vergen-lib bump breaks the Emitter, and a vergen-gitcl minor/patch
# can float that same vergen-lib independently, so both are pinned.
vergen = { version = "=9.0.6", default-features = false }
vergen-gitcl = { version = "=1.0.8", features = ["build", "cargo"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["parsing"] }
# default-features = false keeps native-tls/openssl out of the graph; rustls
# uses ring (not aws-lc-rs) with bundled webpki-roots (no host cert store), and
# hickory-dns bypasses getaddrinfo so DNS resolves under musl. Exact-pinned so a
# patch cannot re-scope the DNS feature back onto getaddrinfo.
reqwest = { version = "=0.12.28", default-features = false, features = [
    "blocking",
    "rustls-tls-webpki-roots-no-provider",
    "hickory-dns",
] }
rustls = { version = "=0.23.41", default-features = false, features = ["ring"] }
minisign-verify = "=0.2.5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 0.0.x: every patch is semver-breaking, so pin exactly and review upgrades at
# the config-adapters adapter boundary.
serde-saphyr = "=0.0.29"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# restriction is allow-by-default; these are the cherry-picked opt-ins.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
