[package]
name = "corpus-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
corpus = { path = "../corpus" }
document = { path = "../document" }
vcs = { path = "../vcs" }
vcs-adapters = { path = "../vcs-adapters" }
regex = { workspace = true }
time = { workspace = true }
