[package]
name = "document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "document-fixture"
path = "tests/fixtures/document_fixture.rs"

[dependencies]
serde = { workspace = true }
serde-saphyr = { workspace = true }
