[package]
name = "accelerator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "accelerator"
path = "src/main.rs"

# Test fixture: must live in this package so black-box tests can locate it via
# CARGO_BIN_EXE_accelerator-fixture (cargo sets that only for the package's bins).
[[bin]]
name = "accelerator-fixture"
path = "tests/fixtures/accelerator_fixture.rs"

[dependencies]
kernel = { path = "../kernel" }
config = { path = "../config" }
config-adapters = { path = "../config-adapters" }
clap = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
minisign-verify = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[dev-dependencies]
time = { workspace = true }
