[package]
# Root-of-trust verifier: a tiny minisign-verify wrapper. Inherits the workspace
# version (its own carries no meaning; the launcher crate is version-bearing).
name = "accelerator-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "accelerator-verify"
path = "src/main.rs"

[dependencies]
minisign-verify = { workspace = true }
