[package]
name = "accelerator-visualiser"
version = "1.21.0-pre.3"
edition = "2021"
# MSRV is 1.85 (edition2024 stabilisation). The mise toolchain is
# pinned newer because dev-deps (icu via reqwest/rustls) need 1.86+;
# library consumers only need 1.85.
rust-version = "1.85"
description = "Meta-directory visualiser server for the accelerator Claude Code plugin"
publish = false

[features]
default = ["embed-dist"]
embed-dist = ["dep:rust-embed", "dep:mime_guess"]
dev-frontend = ["tower-http/fs"]

[lib]

[[bin]]
name = "accelerator-visualiser"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "fs"] }
tower-http = { version = "0.5", features = [
    "trace", "limit", "timeout",
    "compression-br", "compression-gzip",
] }
rust-embed = { version = "8", features = ["compression"], optional = true }
mime_guess = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
file-rotate = "0.7"
tempfile = "3"
nix = { version = "0.28", features = ["signal", "process"] }
anyhow = "1"
thiserror = "1"
libc = "0.2"
sha2 = "0.10"
gray_matter = { version = "0.3", default-features = false, features = ["yaml"] }
serde_yml = "0.0.12"
hex = "0.4"
notify = "6"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
