[package]
name = "accelerator-visualiser"
version = "1.24.0-pre.8"
edition = "2021"
# MSRV is 1.85 (edition2024 stabilisation). The mise toolchain is
# pinned newer because dev-deps (icu via reqwest/rustls) need 1.86+;
# library consumers only need 1.85.
rust-version = "1.85"
description = "Meta-directory visualiser server for the accelerator Claude Code plugin"
publish = false

[features]
default = ["embed-dist"]
embed-dist = ["dep:rust-embed", "dep:mime_guess"]
dev-frontend = ["tower-http/fs"]

[lib]

[[bin]]
name = "accelerator-visualiser"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "fs"] }
tower-http = { version = "0.5", features = [
    "trace", "limit", "timeout",
    "compression-br", "compression-gzip",
] }
rust-embed = { version = "8", features = ["compression"], optional = true }
mime_guess = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
file-rotate = "0.7"
tempfile = "3"
nix = { version = "0.28", features = ["signal", "process"] }
anyhow = "1"
thiserror = "1"
libc = "0.2"
sha2 = "0.10"
gray_matter = { version = "0.3", default-features = false, features = ["yaml"] }
serde_yml = "0.0.12"
hex = "0.4"
notify = "6"
arc-swap = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
form_urlencoded = "1"
humantime = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[lints.clippy]
# pedantic enabled at warn, priority -1 so the individual allows below (default
# priority 0) override it. Default clippy groups stay at their warn defaults and
# are promoted to errors by `-- -D warnings` in the lint task / CI (the [lints]
# table cannot express the `warnings` catch-all).
pedantic = { level = "warn", priority = -1 }

# --- Curated pedantic allows (each with a justification) ---------------------
missing_errors_doc = "allow"      # no # Errors section mandated on every fallible fn
missing_panics_doc = "allow"      # ditto for # Panics
must_use_candidate = "allow"      # too noisy; flags large numbers of fns
module_name_repetitions = "allow" # permits e.g. assets::AssetError naming
# Numeric `as` casts in size/duration/index/byte math are deliberate and
# known-safe in context; mechanical try_from rewrites would add error paths for
# arithmetically-impossible cases.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"          # function length is a readability opinion
type_complexity = "allow"         # some axum/tokio signatures are inherently complex
implicit_hasher = "allow"         # no generic-hasher API exposed; explicit HashMap is intentional
similar_names = "allow"           # short related bindings (req/res, etc.) read clearly
struct_excessive_bools = "allow"  # config structs carry several independent flags
ref_option = "allow"              # &Option<T> params match the borrow patterns used
needless_pass_by_value = "allow"  # owned params are intentional where the value is stored/consumed
